force-app/main/default/objects/Referral_Response__c/Referral_Response__c.object-meta.xml
<CustomObject>
    <description>Records capturing the questions and response messages sent to client regarding their referrals</description>
    <label>Referral Response</label>
    <nameField>
        <displayFormat>RR-{000000}</displayFormat>
        <label>Referral Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referral Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>