force-app/main/default/objects/Referral_Response__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <description>The question that was asked of the client, sent via a message</description>
    <inlineHelpText>The question that was asked of the client, sent via a message</inlineHelpText>
    <label>Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>