force-app/main/default/objects/Referral_Response__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The referral record regarding which the question messages were sent to the client</description>
    <inlineHelpText>The referral record regarding which the question messages were sent to the client</inlineHelpText>
    <label>Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Referral Responses</relationshipLabel>
    <relationshipName>Referral_Responses</relationshipName>
    <type>Lookup</type>
</CustomField>