force-app/main/default/objects/Referral_Response__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>The response received by the client</description>
    <inlineHelpText>The response received by the client</inlineHelpText>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>