force-app/main/default/objects/Referral_Response__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <description>The 18 character Id of the task that caused this question to be sent</description>
    <inlineHelpText>The 18 character Id of the task that caused this question to be sent</inlineHelpText>
    <label>Task Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>